# alhacen

./: LICENSE  alhacen.cabal  stack.yaml  statuetest.tif  tiny.tif
app/: Main.hs
src/Graphics/: Alhacen.hs
src/Graphics/Alhacen/: Rect.hs  Window.hs
test/: Spec.hs  doctests.hs
test/Graphics/Alhacen/: RectTest.hs
