name:                alhacen
version:             0.1.0.0
synopsis:            Photogrammetry Exploration
description:         Please see README.md
homepage:            https://github.com/lancelet/alhacen
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2016 Jonathan Merritt
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Alhacen
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
  default-language:    Haskell2010

executable alhacen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , alhacen
  default-language:    Haskell2010

test-suite alhacen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , alhacen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lancelet/alhacen
