name:                alhacen
version:             0.1.0.0
synopsis:            Photogrammetry Exploration
description:         Please see README.md
homepage:            https://github.com/lancelet/alhacen
license:             BSD3
license-file:        LICENSE
author:              Jonathan Merritt
maintainer:          j.s.merritt@gmail.com
copyright:           2016 Jonathan Merritt
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall
  exposed-modules:     Graphics.Alhacen
                     , Graphics.Alhacen.Rect
  build-depends:       base >= 4.7 && < 5
                     , intervals
                     , JuicyPixels
                     , QuickCheck

executable alhacen
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2 -Wall
  build-depends:       base
                     , alhacen

test-suite alhacen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Graphics.Alhacen.RectTest
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , alhacen
                     , QuickCheck
                     , random
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck

test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  ghc-options:         -threaded
  main-is:             doctests.hs
  default-language:    Haskell2010
  build-depends:  base
                , doctest

source-repository head
  type:     git
  location: https://github.com/lancelet/alhacen
